--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="schedule">
             <h2>Schedule</h2>
             <p><strong>Friday:</strong> Welcome Dinner</p>
-            <p><strong>Saturday:</strong> City Activities, Gala Night</p>
+            <p><strong>Saturday:</strong> Charter, City Activities, Gala Night</p>
             <p><strong>Sunday:</strong> Farewell Brunch</p>
         </section>
 
