--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Contact - RT17 Tallinn Royal Charter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - RT17 Tallinn Royal Charter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="page-header">
-  <h1>Contact</h1>
+<header class="hero small-hero">
+    <h1>Contact</h1>
 </header>
-<main class="content">
-
-<p>Email us: <a href="mailto:krister.vellet@rte.ee" class="gold-link">krister.vellet@rte.ee</a></p>
-<p>WhatsApp us: <a href="https://wa.me/3725155507" class="gold-link" target="_blank">+372 5155 507</a></p>
-
-</main>
-<nav class="footer-nav">
-  <a href="index.html">Home</a>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="accommodation.html">Accommodation</a>
+    <a href="registration.html">Registration</a>
+    <a href="contact.html">Contact</a>
 </nav>
+<main>
+    <section>
+        <p>If you have any questions, feel free to reach out:</p>
+        <p>Email: <a href="mailto:info@tallinnroyalcharter.com">info@tallinnroyalcharter.com</a></p>
+        <p>WhatsApp: <a href="https://wa.me/1234567890">+1234567890</a></p>
+    </section>
+</main>
 <footer>
-  <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
+    <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
 </body>
 </html>
