--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RT17 Tallinn Royal Charter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
     <a href="registration.html" class="button">Register Now</a>
 </header>
 <nav>
+    <a href="index.html">Home</a>
     <a href="schedule.html">Schedule</a>
     <a href="accommodation.html">Accommodation</a>
     <a href="registration.html">Registration</a>
