--- a/schedule.html
+++ b/schedule.html
@@ -1,31 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Schedule - RT17 Tallinn Royal Charter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Schedule - RT17 Tallinn Royal Charter</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="page-header">
-  <h1>Schedule</h1>
+<header class="hero small-hero">
+    <h1>Schedule</h1>
 </header>
-<main class="content">
-
-<ul class="timeline">
-  <li><strong>Friday:</strong> Welcome Dinner for international guests</li>
-  <li><strong>Saturday:</strong> Charter meeting, fun day activity, Gala Dinner</li>
-  <li><strong>Sunday:</strong> Farewell Brunch for international guests</li>
-</ul>
-
-</main>
-<nav class="footer-nav">
-  <a href="index.html">Home</a>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="accommodation.html">Accommodation</a>
+    <a href="registration.html">Registration</a>
+    <a href="contact.html">Contact</a>
 </nav>
+<main>
+    <section>
+        <p>Our full event schedule will be published soon. Get ready for an unforgettable weekend in Tallinn filled with celebration, brotherhood, and royal hospitality!</p>
+    </section>
+</main>
 <footer>
-  <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
+    <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
 </body>
 </html>
