--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - RT17 Tallinn Royal Charter</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="hero small-hero">
-    <h1>Contact</h1>
+<header class="small-hero">
+    <div class="header-content">
+        <h1></h1>
+    </div>
 </header>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="accommodation.html">Accommodation</a>
-    <a href="registration.html">Registration</a>
-    <a href="contact.html">Contact</a>
+<nav class="navbar">
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="accommodation.html">Accommodation</a>
+        <a href="registration.html">Registration</a>
+        <a href="contact.html">Contact</a>
+    </div>
 </nav>
 <main>
-    <section>
-        <p>If you have any questions, feel free to reach out:</p>
-        <p>Email: <a href="mailto:info@tallinnroyalcharter.com">info@tallinnroyalcharter.com</a></p>
-        <p>WhatsApp: <a href="https://wa.me/1234567890">+1234567890</a></p>
-    </section>
+    
+<p>If you have any questions, feel free to reach out to:</p>
+<p><strong>I.R.O. Karel Kesküla</strong></p>
+<p>Email: <a href="mailto:karel.keskyla@rte.ee">karel.keskyla@rte.ee</a></p>
+<p>WhatsApp: <a href="https://wa.me/37253738714" target="_blank">+372 5373 8714</a></p>
+
 </main>
 <footer>
     <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
