--- a/registration.html
+++ b/registration.html
@@ -3,37 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration - RT17 Tallinn Royal Charter</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <title>Registration</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="hero small-hero">
-    <h1>Registration</h1>
+<header class="small-hero">
+    <div class="header-content">
+        <h1></h1>
+    </div>
 </header>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="accommodation.html">Accommodation</a>
-    <a href="registration.html">Registration</a>
-    <a href="contact.html">Contact</a>
+<nav class="navbar">
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="accommodation.html">Accommodation</a>
+        <a href="registration.html">Registration</a>
+        <a href="contact.html">Contact</a>
+    </div>
 </nav>
 <main>
-    <section>
-        <form>
-            <label for="name">Full Name:</label><br>
-            <input type="text" id="name" name="name"><br><br>
+    
+<form action="https://formspree.io/f/meogokqq" method="POST">
+    <input type="hidden" name="_redirect" value="https://rt17tallinnroyalcharter.eu/thankyou.html">
 
-            <label for="email">Email Address:</label><br>
-            <input type="email" id="email" name="email"><br><br>
+    <label for="name">Full Name:</label><br>
+    <input type="text" id="name" name="name" required><br><br>
 
-            <label for="phone">Phone Number:</label><br>
-            <input type="tel" id="phone" name="phone"><br><br>
+    <label for="club">Club Name:</label><br>
+    <input type="text" id="club" name="club" required><br><br>
 
-            <input type="submit" value="Submit">
-        </form>
-        <p>After registration, you will receive a confirmation email with further instructions regarding payment and event details.</p>
-    </section>
+    <label for="country">Country:</label><br>
+    <input type="text" id="country" name="country" required><br><br>
+
+    <label for="email">Email Address:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="dietary">Dietary Restrictions (optional):</label><br>
+    <input type="text" id="dietary" name="dietary"><br><br>
+
+    <label for="message">Other Relevant Information:</label><br>
+    <textarea id="message" name="message"></textarea><br><br>
+
+    <input type="submit" value="Submit" class="button">
+</form>
+
+<h2>Payment Instructions</h2>
+<p>After submitting your registration, please transfer <strong>€250</strong> manually to the following bank account:</p>
+<p><strong>Beneficiary:</strong> Elar Toomsalu<br>
+<strong>IBAN:</strong> EE947700771011155121<br>
+<strong>Bank:</strong> LHV Pank</p>
+<p><em>Please use your full name and club name as the payment reference.</em></p>
+
 </main>
 <footer>
     <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
