--- a/thankyou.html
+++ b/thankyou.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Thank You - RT17 Tallinn Royal Charter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="small-hero">
     <div class="header-content">
-        <h1></h1>
+        <h1>Thank You!</h1>
     </div>
 </header>
 <nav class="navbar">
@@ -22,6 +22,11 @@
     </div>
 </nav>
 <main>
+    
+    <p>Thank you for registering!</p>
+    <p>We have received your registration. Please remember to complete your payment transfer if you haven't already.</p>
+    <p>We look forward to welcoming you to Tallinn for an unforgettable event!</p>
+    <a href="index.html" class="button">Return to Home</a>
     
 </main>
 <footer>
