--- a/accommodation.html
+++ b/accommodation.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accommodation - RT17 Tallinn Royal Charter</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <title>Accommodation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="hero small-hero">
-    <h1>Accommodation</h1>
+<header class="small-hero">
+    <div class="header-content">
+        <h1></h1>
+    </div>
 </header>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="accommodation.html">Accommodation</a>
-    <a href="registration.html">Registration</a>
-    <a href="contact.html">Contact</a>
+<nav class="navbar">
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="accommodation.html">Accommodation</a>
+        <a href="registration.html">Registration</a>
+        <a href="contact.html">Contact</a>
+    </div>
 </nav>
 <main>
-    <section>
-        <p>We are finalizing arrangements with top hotels in Tallinn to offer you a comfortable and stylish stay. Accommodation details will be announced shortly.</p>
-    </section>
+    <p>We are finalizing arrangements with top hotels in Tallinn to offer you a comfortable and stylish stay. Accommodation details will be announced shortly.</p>
 </main>
 <footer>
     <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
