--- a/registration.html
+++ b/registration.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registration - RT17 Tallinn Royal Charter</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="small-hero">
-    <div class="header-content">
-        <h1></h1>
-    </div>
+<div class="header-content">
+<h1>Registration</h1>
+</div>
 </header>
 <nav class="navbar">
-    <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="accommodation.html">Accommodation</a>
-        <a href="registration.html">Registration</a>
-        <a href="contact.html">Contact</a>
-    </div>
+<div class="nav-container">
+<a href="index.html" class="brand-title">RT17</a>
+<a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
+<div class="navbar-links" id="navbar-links">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="schedule.html">Schedule</a></li>
+<li><a href="accommodation.html">Accommodation</a></li>
+<li><a href="registration.html">Registration</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</div>
 </nav>
 <main>
-    
-<form action="https://formspree.io/f/meogokqq" method="POST">
-    <input type="hidden" name="_redirect" value="https://rt17tallinnroyalcharter.eu/thankyou.html">
 
-    <label for="name">Full Name:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
-
-    <label for="club">Club Name:</label><br>
-    <input type="text" id="club" name="club" required><br><br>
-
-    <label for="country">Country:</label><br>
-    <input type="text" id="country" name="country" required><br><br>
-
-    <label for="email">Email Address:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="dietary">Dietary Restrictions (optional):</label><br>
-    <input type="text" id="dietary" name="dietary"><br><br>
-
-    <label for="message">Other Relevant Information:</label><br>
-    <textarea id="message" name="message"></textarea><br><br>
-
-    <input type="submit" value="Submit" class="button">
+<form action="https://formspree.io/f/meogokqq" method="POST" class="form">
+<label>Full Name:<input type="text" name="Full Name" required></label>
+<label>Club Name:<input type="text" name="Club Name" required></label>
+<label>Country:<input type="text" name="Country" required></label>
+<label>Email Address:<input type="email" name="email" required></label>
+<label>Dietary Restrictions (optional):<input type="text" name="Dietary Restrictions"></label>
+<label>Other relevant information:<textarea name="Other relevant information"></textarea></label>
+<button type="submit">Submit</button>
 </form>
-
-<h2>Payment Instructions</h2>
-<p>After submitting your registration, please transfer <strong>€250</strong> manually to the following bank account:</p>
-<p><strong>Beneficiary:</strong> Elar Toomsalu<br>
-<strong>IBAN:</strong> EE947700771011155121<br>
-<strong>Bank:</strong> LHV Pank</p>
-<p><em>Please use your full name and club name as the payment reference.</em></p>
+<p>After submitting your registration, please transfer €250 manually to the following bank account:<br>
+Beneficiary: Elar Toomsalu<br>
+IBAN: EE947700771011155121<br>
+Bank: LHV Pank<br><br>
+Please use your full name and club name as the payment reference.</p>
 
 </main>
 <footer>
-    <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
+<p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
+<script>
+function toggleMenu() { 
+  var menu = document.getElementById('navbar-links'); 
+  menu.classList.toggle('active'); 
+}
+</script>
 </body>
 </html>
