--- a/contact.html
+++ b/contact.html
@@ -4,44 +4,30 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact - RT17 Tallinn Royal Charter</title>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="small-hero">
-<div class="header-content">
-<h1>Contact</h1>
-</div>
-</header>
-<nav class="navbar">
 <div class="nav-container">
 <a href="index.html" class="brand-title">RT17</a>
 <a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
-<div class="navbar-links" id="navbar-links">
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="schedule.html">Schedule</a></li>
-<li><a href="accommodation.html">Accommodation</a></li>
-<li><a href="registration.html">Registration</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
 </div>
+<div class="header-content-small">
+<h1>Contact</h1>
 </div>
-</nav>
+</header>
 <main>
-
-<p>If you have any questions, feel free to reach out:</p>
-<p>Email: <a href="mailto:karel.keskyla@rte.ee">karel.keskyla@rte.ee</a><br>
-WhatsApp: <a href="https://wa.me/37253738714" target="_blank">+372 5373 8714</a></p>
-
+<p>If you have any questions, feel free to reach out to:</p>
+<p><strong>I.R.O. Karel Kesküla</strong></p>
+<p>Email: <a href="mailto:karel.keskyla@rte.ee">karel.keskyla@rte.ee</a></p>
+<p>WhatsApp: <a href="https://wa.me/37253738714" target="_blank">+372 5373 8714</a></p>
 </main>
 <footer>
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
 <script>
-function toggleMenu() { 
-  var menu = document.getElementById('navbar-links'); 
-  menu.classList.toggle('active'); 
-}
+function toggleMenu() {{ var menu = document.getElementById('navbar-links'); menu.classList.toggle('active'); }}
 </script>
 </body>
 </html>
