--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 <header class="small-hero">
 <div class="nav-container">
-<a href="index.html" class="brand-title">RT17</a>
+<a href="index.html" <img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
 <a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
 </div>
 <div class="header-content-small">
