--- a/schedule.html
+++ b/schedule.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
 <body>
 <header class="small-hero">
 <div class="nav-container">
-<a href="index.html" class="brand-title">RT17</a>
+<a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
 <a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
 </div>
 <div class="header-content-small">
@@ -18,13 +19,18 @@
 </div>
 </header>
 <main>
-<p>Our full event schedule will be published soon. Get ready for an unforgettable weekend in Tallinn filled with celebration, brotherhood, and royal hospitality!</p>
+<h2>Friday</h2>
+<p>19:00 Welcome dinner for international guests</p>
+<h2>Saturday</h2>
+<p>10:00 RT17 Tallinn Royal Charter</p>
+<p>13:00 Day activity for international guests</p>
+<p>19:00 Gala dinner</p>
+<h2>Sunday</h2>
+<p>10:00 Farewell brunch for international guests</p>
+<p><em>All venues and event details will be announced later.</em></p>
 </main>
 <footer>
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
-<script>
-function toggleMenu() {{ var menu = document.getElementById('navbar-links'); menu.classList.toggle('active'); }}
-</script>
 </body>
 </html>
