--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ setInterval(updateCountdown, 1000);
 </head>
 <body onload="updateCountdown()">
 <header class="hero">
-  <div class="navbar">
+  <div class="nav-container">
     <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
-    <button onclick="document.getElementById('nav-links').classList.toggle('show')">☰</button>
+    <button class="toggle-button" onclick="toggleMenu()">☰</button>
     <div class="nav-links" id="nav-links">
       <a href="index.html">Home</a>
       <a href="schedule.html">Schedule</a>
@@ -57,5 +57,11 @@ setInterval(updateCountdown, 1000);
 <footer>
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
+<script>
+function toggleMenu() {
+    var menu = document.getElementById('nav-links');
+    menu.classList.toggle('active');
+}
+</script>
 </body>
 </html>
