--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +8,26 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <header class="small-hero">
 <div class="nav-container">
 <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
+<button class="toggle-button" onclick="toggleMenu()">☰</button>
+<div class="nav-links" id="nav-links">
+  <a href="index.html">Home</a>
+  <a href="schedule.html">Schedule</a>
+  <a href="accommodation.html">Accommodation</a>
+  <a href="registration.html">Registration</a>
+  <a href="contact.html">Contact</a>
+</div>
+</div>
+<div class="header-content-small">
+<h1>Schedule</h1>
+</div>
+</header>
+
+<div class="nav-container">
+<a href="index.html" class="brand-title">RT17</a>
 <a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
 </div>
 <div class="header-content-small">
@@ -19,18 +35,20 @@
 </div>
 </header>
 <main>
-<h2>Friday</h2>
-<p>19:00 Welcome dinner for international guests</p>
-<h2>Saturday</h2>
-<p>10:00 RT17 Tallinn Royal Charter</p>
-<p>13:00 Day activity for international guests</p>
-<p>19:00 Gala dinner</p>
-<h2>Sunday</h2>
-<p>10:00 Farewell brunch for international guests</p>
-<p><em>All venues and event details will be announced later.</em></p>
+<p>Our full event schedule will be published soon. Get ready for an unforgettable weekend in Tallinn filled with celebration, brotherhood, and royal hospitality!</p>
 </main>
 <footer>
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
+<script>
+<script>
+function toggleMenu() {
+    var menu = document.getElementById('nav-links');
+    menu.classList.toggle('active');
+}
+</script>
+
+function toggleMenu() {{ var menu = document.getElementById('navbar-links'); menu.classList.toggle('active'); }}
+</script>
 </body>
 </html>
