--- a/accommodation.html
+++ b/accommodation.html
@@ -12,7 +12,7 @@
 <header class="small-hero">
 <div class="nav-container">
 <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
-<button onclick="document.getElementById('nav-links').classList.toggle('show')">☰</button>
+<button class="toggle-button" onclick="toggleMenu()">☰</button>
 <div class="nav-links" id="nav-links">
   <a href="index.html">Home</a>
   <a href="schedule.html">Schedule</a>
@@ -41,7 +41,12 @@
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
 <script>
-function toggleMenu() { var menu = document.getElementById("nav-links"); menu.classList.toggle("show"); }
+<script>
+function toggleMenu() {
+    var menu = document.getElementById('nav-links');
+    menu.classList.toggle('active');
+}
+</script>
 
 function toggleMenu() {{ var menu = document.getElementById('navbar-links'); menu.classList.toggle('active'); }}
 </script>
