--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
 </head>
 <body>
 <header class="hero">
-  <div class="nav-container regular-nav">
-    <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
-    <nav class="nav-links-regular">
-      <a href="index.html">Home</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="accommodation.html">Accommodation</a>
-      <a href="registration.html">Registration</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
   <div class="header-content">
+    <img src="RT_Royal_Logo_GOLD.png" alt="RT17 Logo" class="main-logo">
     <h1>RT17 Tallinn Royal Charter</h1>
     <p>19–21 September 2025 · Tallinn, Estonia</p>
     <div id="countdown"></div>
     <a href="registration.html" class="button">Register Now</a>
   </div>
 </header>
+<nav class="nav-centered">
+  <a href="index.html">Home</a>
+  <a href="schedule.html">Schedule</a>
+  <a href="accommodation.html">Accommodation</a>
+  <a href="registration.html">Registration</a>
+  <a href="contact.html">Contact</a>
+</nav>
 <main>
 <section class="about">
 <h2>About the Event</h2>
