--- a/schedule.html
+++ b/schedule.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,49 +7,37 @@
 <title>Schedule - RT17 Tallinn Royal Charter</title>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="RT_Royal_Logo_GOLD.png" type="image/png">
 </head>
 <body>
-
 <header class="small-hero">
-<div class="nav-container">
-<a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
-<button class="toggle-button" onclick="toggleMenu()">☰</button>
-<div class="nav-links" id="nav-links">
+  <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
+  <div class="header-content-small">
+    <h1>Schedule</h1>
+  </div>
+</header>
+<nav class="nav-centered">
   <a href="index.html">Home</a>
   <a href="schedule.html">Schedule</a>
   <a href="accommodation.html">Accommodation</a>
   <a href="registration.html">Registration</a>
   <a href="contact.html">Contact</a>
-</div>
-</div>
-<div class="header-content-small">
-<h1>Schedule</h1>
-</div>
-</header>
-
-<div class="nav-container">
-<a href="index.html" class="brand-title">RT17</a>
-<a href="javascript:void(0);" class="toggle-button" onclick="toggleMenu()">☰</a>
-</div>
-<div class="header-content-small">
-<h1>Schedule</h1>
-</div>
-</header>
+</nav>
 <main>
-<p>Our full event schedule will be published soon. Get ready for an unforgettable weekend in Tallinn filled with celebration, brotherhood, and royal hospitality!</p>
+
+<h2>Friday</h2>
+<p>19:00 Welcome dinner for international guests</p>
+<h2>Saturday</h2>
+<p>10:00 RT17 Tallinn Royal Charter</p>
+<p>13:00 Day activity for international guests</p>
+<p>19:00 Gala dinner</p>
+<h2>Sunday</h2>
+<p>10:00 Farewell brunch for international guests</p>
+<p><em>All venues and event details will be announced later.</em></p>
+
 </main>
 <footer>
 <p>© 2025 RT17 Tallinn Royal. All rights reserved.</p>
 </footer>
-<script>
-<script>
-function toggleMenu() {
-    var menu = document.getElementById('nav-links');
-    menu.classList.toggle('active');
-}
-</script>
-
-function toggleMenu() {{ var menu = document.getElementById('navbar-links'); menu.classList.toggle('active'); }}
-</script>
 </body>
 </html>
