--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@ function updateCountdown() {
   const days = Math.floor(distance / (1000 * 60 * 60 * 24));
   const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-  document.getElementById("countdown").innerHTML = 
-    `<h2>${days}d ${hours}h ${minutes}m ${seconds}s</h2>`;
-
-  if (distance < 0) {
+  if (distance > 0) {
+    document.getElementById("countdown").innerHTML = 
+      `<h2>In ${days} days ${hours} hours ${minutes} minutes</h2>`;
+  } else {
     document.getElementById("countdown").innerHTML = "<h2>Event Started!</h2>";
   }
 }
 
-setInterval(updateCountdown, 1000);
+updateCountdown(); // Call once immediately
+setInterval(updateCountdown, 60000); // Update every minute
 </script>
 </body>
 </html>
