--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 </head>
 <body>
 <header class="small-hero">
-  <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
   <div class="header-content-small">
+    <a href="index.html"><img src="RT_Royal_Logo_GOLD.png" alt="Logo" class="logo-small"></a>
     <h1>Contact</h1>
   </div>
+</header>
 </header>
 <nav class="nav-centered">
   <a href="schedule.html">Schedule</a>
