--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <title>Contact - RT17 Tallinn Royal Charter</title>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="RT_Royal_Logo_GOLD.png" type="image/png">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <header class="small-hero">
